--- a/styless.css
+++ b/styless.css
@@ -1,3 +1,3 @@
 body {background-color: powderblue;}
-h2   {color: blue;background-color: green;}
+h2   {color: blue;background-color: green; border:2px solid red ;padding:1px}//The CSS padding property defines a padding (space) between the text and the border.
 p    {color: red;font-family:arial;}
